# freebox-qtcreator-plugin

./: .gitignore  AUTHORS  CMakeLists.txt  FbxProjectManager.mimetypes.xml  Freebox.json.in  Freebox.pluginspec.in  README.md  freebox-qtcreator-plugin.pro  freebox.cpp  freebox.h  freebox.qrc  freebox_global.h  freeboxconfiguration.cpp  freeboxconfiguration.h  freeboxconstants.h  freeboxdevice.cpp  freeboxdevice.h  freeboxqmltoolingsupport.cpp  freeboxqmltoolingsupport.h  freeboxrunconfiguration.cpp  freeboxrunconfiguration.h  freeboxruncontrol.cpp  freeboxruncontrol.h  freeboxsignaloperation.cpp  freeboxsignaloperation.h
.github/workflows/: build_cmake.yml
fileformat/: filefilteritems.cc  filefilteritems.hh  manifest.cc  manifest.hh  qmlprojectfileformat.cpp  qmlprojectfileformat.hh  qmlprojectitem.cpp  qmlprojectitem.hh
http/: client.cc  client.cpp  client.h  client.hh  constants.hh  http.cc  http.cpp  http.h  http.hh  server.cc  server.cpp  server.h  server.hh
remote/: remoteconstants.h  remoteconstants.hh  remoteqml.cc  remoteqml.cpp  remoteqml.h  remoteqml.hh
src/: analyzer.cc  analyzer.hh  app.cc  app.hh  configuration.cc  configuration.hh  constants.hh  debugger.cc  debugger.hh  device.cc  device.hh  devicefactory.cc  devicefactory.hh  environment.cc  environment.hh  file.cc  file.hh  freebox_global.hh  freeboxplugin.cc  freeboxplugin.hh  freestorepackager.cc  freestorepackager.hh  localrunconfiguration.cc  localrunconfiguration.hh  manager.cc  manager.hh  manifest.cc  node.cc  node.hh  processsignaloperation.cc  processsignaloperation.hh  project.cc  project.hh  remoterunconfiguration.cc  remoterunconfiguration.hh  runconfigurationfactory.cc  runconfigurationfactory.hh  runconfigurationwidget.cc  runconfigurationwidget.hh  runcontrol.cc  (+9 more)
ssdp/: ssdpclient.cc  ssdpclient.cpp  ssdpclient.h  ssdpclient.hh  ssdpconstants.h  ssdpconstants.hh  ssdpmessage.cc  ssdpmessage.cpp  ssdpmessage.h  ssdpmessage.hh  ssdpsearch.cc  ssdpsearch.cpp  ssdpsearch.h  ssdpsearch.hh  udplistener.cc  udplistener.cpp  udplistener.h  udplistener.hh  udpsocket.cc  udpsocket.cpp  udpsocket.h  udpsocket.hh
templates/qml/01-hello/: main.fbxproject  main.qml  template.xml
templates/qml/02-stack/: main.qml  (+2 more)
util/: crc32.c  crc32.h  gzipper.cc  gzipper.hh  jsonrpc.cc  jsonrpc.cpp  jsonrpc.h  jsonrpc.hh
(+12 files in other folders)
